@@ -1,7 +1,6 @@
 using Terraria;
 using Terraria.ID;
 using Terraria.ModLoader;
-using Terraria.GameContent.Creative;
 
 namespace Spooky.Content.Tiles.Blooms
 {
@@ -12,20 +11,13 @@ namespace Spooky.Content.Tiles.Blooms
             Item.ResearchUnlockCount = 5;
         }
 
-        public override void SetDefaults()
-        {
-            Item.useTurn = true;
-			Item.autoReuse = true;
-			Item.consumable = true;
-            Item.noUseGraphic = true;
-            Item.width = 34;
+		public override void SetDefaults()
+		{
+			Item.DefaultToPlaceableTile(ModContent.TileType<DragonfruitBloomPlant>());
+			Item.width = 34;
 			Item.height = 40;
-			Item.useTime = 15;
-			Item.useAnimation = 15;
-            Item.rare = ItemRarityID.Blue;
-			Item.useStyle = ItemUseStyleID.Swing;
-			Item.maxStack = 9999;
-			Item.createTile = ModContent.TileType<DragonfruitBloomPlant>();
-        }
-    }
+			Item.noUseGraphic = true;
+			Item.rare = ItemRarityID.Blue;
+		}
+	}
 }
