@@ -1,7 +1,6 @@
 using Terraria;
 using Terraria.ID;
 using Terraria.ModLoader;
-using Terraria.GameContent.Creative;
 
 namespace Spooky.Content.Tiles.Blooms
 {
@@ -12,24 +11,17 @@ namespace Spooky.Content.Tiles.Blooms
             Item.ResearchUnlockCount = 5;
         }
 
-        public override void SetDefaults()
-        {
-            Item.useTurn = true;
-			Item.autoReuse = true;
-			Item.consumable = true;
-            Item.noUseGraphic = true;
-            Item.width = 48;
+		public override void SetDefaults()
+		{
+			Item.DefaultToPlaceableTile(ModContent.TileType<WinterBloomPlant>());
+			Item.width = 48;
 			Item.height = 40;
-			Item.useTime = 15;
-			Item.useAnimation = 15;
-            Item.rare = ItemRarityID.Blue;
-			Item.useStyle = ItemUseStyleID.Swing;
-            Item.placeStyle = Main.rand.Next(0, 4);
-			Item.maxStack = 9999;
-			Item.createTile = ModContent.TileType<WinterBloomPlant>();
-        }
+			Item.noUseGraphic = true;
+			Item.rare = ItemRarityID.Blue;
+			Item.placeStyle = Main.rand.Next(0, 4);
+		}
 
-        public override bool? UseItem(Player player)
+		public override bool? UseItem(Player player)
 		{
 			Item.placeStyle = Main.rand.Next(0, 4);
 			return null;
